Delegate agent to proxy
Delegate the target Java agent with a proxy agent, so all transforming
actions will be inspected that no JDK and GraalVM framework classes
shall be transformed.